#588204 - convert site listings to bulk operations forms

--- a/hosting.css
+++ b/hosting.css
@@ -3,6 +3,9 @@
  */
 
 .hosting-site-list {clear:both;}
+#hosting-site-list-form {
+  position: relative;
+}
 
 
 .hosting-service-info, 
@@ -75,8 +78,8 @@ td.hosting-package-downgrade,
 td.hosting-package-same,
 td.hosting-package-missing {
   padding-left:25px !important;
-  background-position:5px 7px;
-  background-repeat:no-repeat;
+  background-position:5px 7px !important;
+  background-repeat:no-repeat !important;
 }
 
 span.hosting-status {
