Issue #2212149: Improve task queue AJAX refresh. Progress in implementing Vue.js.  - Adding content type to Hosting Task View and template so it reads "Verify Site:" instead of "Verify".  - Adding jQuery "timeago" plugin  and adding timestamps so we can dynamically update "time ago". See http://timeago.yarp.com/  - Styling "time ago" text to not be too obtrusive.

--- a/hosting.css
+++ b/hosting.css
@@ -79,6 +79,14 @@ td.hosting-actions .hosting-button-disabled {
   text-transform: none;
 }
 
+.view-hosting-task-list .hosting-status time {
+  font-size:0.8em;
+  color: #555;
+  text-transform: uppercase;
+  padding: 0 1em 0 0;
+  white-space: nowrap;
+}
+
 /**
  * Status icons, colors.
  */
